--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<meta name="robots" content="all" />
 	<meta name="MSSmartTagsPreventParsing" content="true" />
 	<meta http-equiv="imagetoolbar" content="false" />
+	<meta name="description" content="Matthew Tovbin - versatile software engineer; hobbyist photographer; desperate PC gamer; Internet addict; sci-fi fan">
+	<meta name="author" content="Matthew Tovbin">
 	<style>
 		* { padding: 0; margin: 0; }
   		p { font-weight: bold; font-family: Helvetica; font-size: 16px; line-height: 24px; margin-bottom: 22px; -webkit-font-smoothing: antialiased; color: white }
@@ -16,6 +18,7 @@
   		#about { width: 360px; padding: 0 0 0 270px; margin: 0px px 0 auto !important; }
   		ul { list-style-type: none; font-family: Helvetica; color: white}
 	</style>
+	<link rel="shortcut icon" href="images/favicon.ico">
 </head>
 
 <body>
