--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<li>desperate PC gamer</li>
 	<li>Internet addict</li>
 	<li>sci-fi fan</li>	
-	<li><a href="https://github.com/tovbinm"><img src="images/github_icon.png" alt="View my code on Github"/></a>&nbsp;<a href="http://il.linkedin.com/in/matthewtovbin"><img src="images/linkedin_icon.png" alt="View my profile on LinkedIn"/></a>&nbsp;<a href="http://www.twitter.com/tovbinm"><img src="images/twitter_icon.png" alt="Follow me on Twitter"/></a>&nbsp;<a href="http://www.flickr.com/photos/matveich"><img src="images/flickr.png" alt="Flickr photo stream"/></a></li>
+	<li><a href="https://github.com/tovbinm"><img src="images/github_icon.png" alt="View my code on Github"/></a>&nbsp;<a href="https://www.linkedin.com/in/mttov/"><img src="images/linkedin_icon.png" alt="View my profile on LinkedIn"/></a>&nbsp;<a href="http://www.twitter.com/tovbinm"><img src="images/twitter_icon.png" alt="Follow me on Twitter"/></a>&nbsp;<a href="http://www.flickr.com/photos/matveich"><img src="images/flickr.png" alt="Flickr photo stream"/></a></li>
 	</ul>
 	</p>
 </div>
