--- a/index.html
+++ b/index.html
@@ -40,29 +40,21 @@
 	</p>
 </div>
 
+<script src="https://static.sekandocdn.net/static/feednami/feednami-client-v1.1.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
-<script type="text/javascript">	
-	function parseRSS(url, callback) {
-	  $.ajax({
-	    url: 'http://ajax.googleapis.com/ajax/services/feed/load?v=1.0&num=1000&callback=?&q=' + encodeURIComponent(url),
-	    dataType: 'json',
-	    success: function(data) {	       
-	      callback(data.responseData.feed);
-	    }
-	  });
-	}
-	var rssurl = "http://api.flickr.com/services/feeds/photos_public.gne?id=92995374@N05&lang=en-us&format=rss_200";
-	parseRSS(rssurl, function(j){
-		var entries = j.entries;
+<script type="text/javascript">
+	var rssurl = "https://api.flickr.com/services/feeds/photos_public.gne?id=92995374@N05&lang=en-us&format=rss_200";
+	feednami.load(rssurl).then(feed => {
+		var entries = feed.entries;
 		var urls = [];
 		for (var i = 0; i < entries.length; ++i) {
-			var url = entries[i].mediaGroups[0].contents[0].url;
+			var url = entries[i]["media:content"]["@"].url;
 			urls.push(url);
 		}
-		var shuffled = urls.sort(function() { return .5 - Math.random(); });		
+		var shuffled = urls.sort(function() { return .5 - Math.random(); });
 		$.backstretch(urls, {duration: 5000, fade: 750});
-	});	
+    });
 </script>
 
 </body>
