--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
 <script type="text/javascript">
 	var rssurl = "https://api.flickr.com/services/feeds/photos_public.gne?id=92995374@N05&lang=en-us&format=rss_200";
+	feednami.setPublicApiKey('a13b7a524171bbc4577a64f7ba5ae9a64f21830b72f600df13a24c619807818b')
 	feednami.load(rssurl).then(feed => {
 		var entries = feed.entries;
 		var urls = [];
