--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </div>
 
 <script src="https://static.sekandocdn.net/static/feednami/feednami-client-v1.1.js"></script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
 <script type="text/javascript">
 	var rssurl = "https://api.flickr.com/services/feeds/photos_public.gne?id=92995374@N05&lang=en-us&format=rss_200";
