--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="robots" content="all" />
 	<meta name="MSSmartTagsPreventParsing" content="true" />
 	<meta http-equiv="imagetoolbar" content="false" />
-	<meta name="description" content="Matthew Tovbin - versatile software engineer; hobbyist photographer; desperate PC gamer; Internet addict; sci-fi fan">
+	<meta name="description" content="Matthew Tovbin - CTO & startup co-founder; versatile software engineer; hobbyist photographer; desperate PC gamer; Internet addict; sci-fi fan; dad">
 	<meta name="author" content="Matthew Tovbin">
 	<style>
 		* { padding: 0; margin: 0; }
