--- a/index.html
+++ b/index.html
@@ -24,17 +24,20 @@
 <body>
 
 <div id="monogram">
+  &nbsp;
 	<img src="images/monogram.png" />
 </div>
 
 <div id="about">
 	<p>&nbsp;<ul>
 	<li><b>Matthew Tovbin</b></li>
+  <li>&nbsp;</li>
   <li>CTO & startup co-founder</li>
 	<li>versatile software engineer</li>
 	<li>hobbyist photographer</li>
 	<li>sci-fi fan</li>
   <li>dad</li>
+  <li>&nbsp;</li>
 	<li><a href="https://github.com/tovbinm"><img src="images/github_icon.png" alt="View my code on Github"/></a>&nbsp;<a href="https://www.linkedin.com/in/mttov/"><img src="images/linkedin_icon.png" alt="View my profile on LinkedIn"/></a>&nbsp;<a href="https://www.twitter.com/tovbinm"><img src="images/twitter_icon.png" alt="Follow me on Twitter"/></a>&nbsp;<a href="https://www.instagram.com/matthew.tovbin"><img src="images/instagram.png" alt="View my Instagram"/></a>&nbsp;<a href="https://www.flickr.com/photos/matveich"><img src="images/flickr.png" alt="Flickr photo stream"/></a></li>
 	</ul>
 	</p>
